# CppGithubAction

./: CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: ci.yml
src/: main.cpp
